--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "pl.adamchodera.databasesshowcase"
+        applicationId "pl.adamchodera.databasesshowcase.greendao"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
