--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity
             android:name=".TaskDetailsActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/task_details_screen_title"
             android:parentActivityName=".TasksListActivity"/>
     </application>
